--- a/Contact.html
+++ b/Contact.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="icon/logoHTML.png">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
+
     <title>Contactez nous, Vacances, Hébergements, Gites et Locations saisonnières à Caen.</title>
 </head>
 
@@ -63,101 +64,192 @@
 
         <h2 class="text-center mb-5 mt-5 slide-left">Un lieu unique pour un séjour unique</h2>
         <hr>
-        <!-- *******************************************Formulaire**************************** -->
+        <!-- *******************************************calendrier**************************** -->
 
-
-        <form id="form" class="form">
-            <div class="container col-10">
-                <h4 class="mb-5">Demande de réservation ou d'informations</h4>
-                <div class="row">
-                    <div class="col-12 col-lg-3 mb-3">
-                        <label for="input-choice" class="form-label">Choix du logement</label>
-                        <select id="input-choice" class="form-select border-black housing-choice "
-                            aria-label="Default select example">
-                            <option selected>Choisissez votre logement</option>
-                            <option value="Cosy Patio">Cosy Patio</option>
-                            <option value="Cosy Zénith">Cosy Zénith</option>
-                            <option value="Zénit'House">Zénit'House</option>
-                        </select>
+        <div class="container col-10">
+            <h4 class="mb-5">Demande de réservation ou d'informations</h4>
+            <!-- <div><div class="calendar">
+                    <div class="month">
+                        <span class="prev-month"></span>
+                        Octobre 2023
+                        <span class="next-month"></span>
                     </div>
-                </div>
+                    <div class="day">Lun</div>
+                    <div class="day">Mar</div>
+                    <div class="day">Mer</div>
+                    <div class="day">Jeu</div>
+                    <div class="day">Ven</div>
+                    <div class="day">Sam</div>
+                    <div class="day">Dim</div>
+                </div> -->
+            <div class="container">
                 <div class="row">
-
-                    <div class="col-12 col-lg-2 mb-3">
-                        <label for="dateIn">Date d'arrivée : </label>
-                        <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start" />
-                        <div id="dateError" style="color: red;"></div>
-                        <div id="dateInNoDispo" style="color: red;"></div>
-                    </div>
-                    <div class="col-12 col-lg-2 mb-3">
-                        <label for="dateOut">Date de départ : </label>
-                        <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start" />
-                        <div id="dateOutError" style="color: red;"></div>
-                    </div>
-
-                </div>
-                <div class="row">
-
-                    <div class="col-12 col-lg-6 mb-3">
-                        <label for="inputNumberNight" class="form-label">Nombre de nuits</label>
-                        <input id="inputNumberNight" type="text" class="border-dark form-control numberNight">
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-12 col-lg-8">
-                        <div class="mb-3">
-                            <label for="inputName" class="form-label">Nom et Prénom</label>
-                            <input id="inputName" type="text" class="border-dark form-control name">
+                    <div id="cld" class="col-md-10 offset-md-1 mb-5">
+                        <div id="enteteCLD">
+                            <h4 id="cldT">Janvier</h4>
+                            <div id="avantEtApres">
+                                <button id="left" class="cldBtn">
+                                    << /button>
+                                        <button id="right" class="cldBtn">></button>
+                            </div>
+                        </div>
+                        <div id="cldBoite">
+                            <div id="jours">
+                                <div class="jour">Lun</div>
+                                <div class="jour">Mar</div>
+                                <div class="jour">Mer</div>
+                                <div class="jour">Jeu</div>
+                                <div class="jour">Ven</div>
+                                <div class="jour">Sam</div>
+                                <div class="jour">Dim</div>
+                            </div>
+                            <div id="semaine1" class="semaine">
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                            </div>
+                            <div id="semaine2" class="semaine">
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                            </div>
+                            <div id="semaine3" class="semaine">
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                            </div>
+                            <div id="semaine4" class="semaine">
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                            </div>
+                            <div id="semaine5" class="semaine">
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                            </div>
+                            <div id="semaine6" class="semaine">
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                                <div class="case" data-date=""></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12 col-lg-6">
-                        <div class="mb-3">
-                            <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input id="inputEmail" type="email" class="border-dark form-control email"
-                                aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-6">
-                        <div class="mb-3">
-                            <label for="inputNumber" class="form-label">Numéro de téléphone</label>
-                            <input id="inputNumber" type="text" class="phone border-dark form-control">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 mb-3">
-                        <label for="commentaire">Ecrivez nous</label>
-                        <textarea id="commentaire" class="border-dark form-control message"
-                            placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="border-dark form-check-input" id="check">
-                            <label class="form-check-label figure-caption" for="check">J'accepte que mon adresse mail
 
-                                soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
-                                envoyer des informations concernant nos services et notre actualité. Pour en savoir
-                                plus, consulter notre <a href="#">Politique
-                                    de confidentialité</a>.</label>
-                        </div>
-                    </div>
+
+                <div class="text-center figure-caption mt-2 mb-5">Les périodes indisponibles à la location sont affiché
+                    en rouge.</div>
+            </div>
+            <!-- ***************************fomulaire********************** -->
+            <form id="form" class="form"></form>
+            <div class="row">
+                <div class="col-12 col-lg-3 mb-3">
+                    <label for="input-choice" class="form-label">Choix du logement</label>
+                    <select id="input-choice" class="form-select border-black housing-choice "
+                        aria-label="Default select example">
+                        <option selected>Choisissez votre logement</option>
+                        <option value="Cosy Patio">Cosy Patio</option>
+                        <option value="Cosy Zénith">Cosy Zénith</option>
+                        <option value="Zénit'House">Zénit'House</option>
+                    </select>
                 </div>
-                <div class="row">
-                    <div class="col-1">
-                        <button type="submit" class="btn mb-5">Envoyer</button>
-                    </div>
-                    <div class="offset-lg-1 col-lg-10">
-                        <div id="validation-form" class="validation-form"></div>
+            </div>
+            <div class="row">
+
+                <div class="col-12 col-lg-2 mb-3">
+                    <label for="dateIn">Date d'arrivée : </label>
+                    <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start" />
+                    <div id="dateError" style="color: red;"></div>
+                    <div id="dateInNoDispo" style="color: red;"></div>
+                </div>
+                <div class="col-12 offset-lg col-lg-2 mb-3">
+                    <label for="dateOut">Date de départ : </label>
+                    <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start" />
+                    <div id="dateOutError" style="color: red;"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-6 mb-3">
+                    <label for="inputNumberNight" class="form-label">Nombre de nuits</label>
+                    <input id="inputNumberNight" type="text" class="border-dark form-control numberNight">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-8">
+                    <div class="mb-3">
+                        <label for="inputName" class="form-label">Nom et Prénom</label>
+                        <input id="inputName" type="text" class="border-dark form-control name">
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="mb-3">
+                        <label for="inputEmail" class="form-label">Adresse email</label>
+                        <input id="inputEmail" type="email" class="border-dark form-control email"
+                            aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="mb-3">
+                        <label for="inputNumber" class="form-label">Numéro de téléphone</label>
+                        <input id="inputNumber" type="text" class="phone border-dark form-control">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 mb-3">
+                    <label for="commentaire">Ecrivez nous</label>
+                    <textarea id="commentaire" class="border-dark form-control message"
+                        placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="border-dark form-check-input" id="check">
+                        <label class="form-check-label figure-caption" for="check">J'accepte que mon adresse mail soit
+                            destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous envoyer des
+                            informations concernant nos services et notre actualité. Pour en savoir plus, consulter
+                            notre <a href="#">Politique de confidentialité</a>.</label>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <button type="submit" class="btn mb-5">Envoyer</button>
+                </div>
+                <div class="offset-lg-1 col-lg-10">
+                    <div id="validation-form" class="validation-form"></div>
+                </div>
+            </div>
+        </div>
         </form>
 
         <!-- ********************* footer *************************** -->
@@ -211,6 +303,7 @@
 
 
     </main>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
