--- a/CaenlaMer.html
+++ b/CaenlaMer.html
@@ -160,11 +160,10 @@
                     <div class="col-sm-10 col-lg-4">
                         <div class="card">
                             <div class="card-body p-4">
-                                <h5><img src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"></h5>
+                                <h5 class="text-center mb-4"><img src="icon/icons8-star.png" alt="comment star"><img
+                                        src="icon/icons8-star.png" alt="comment star"><img src="icon/icons8-star.png"
+                                        alt="comment star"><img src="icon/icons8-star.png" alt="comment star"><img
+                                        src="icon/icons8-star.png" alt="comment star"></h5>
                                 <div>
                                     <p>« Séjour de 2 nuits pour un concert au Zénith de Caen. Nous y étions en 5 minutes
                                         en voiture. Nous en avons profité pour faire des visites alentours (40 minutes
@@ -181,11 +180,10 @@
                         <div class="card">
                             <div class="card-body p-4">
 
-                                <h5><img src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"></h5>
+                                <h5 class="text-center mb-4"><img src="icon/icons8-star.png" alt="comment star"><img
+                                        src="icon/icons8-star.png" alt="comment star"><img src="icon/icons8-star.png"
+                                        alt="comment star"><img src="icon/icons8-star.png" alt="comment star"><img
+                                        src="icon/icons8-star.png" alt="comment star"></h5>
                                 <div>
                                     <p>« Excellent séjour chez Franck dans ce studio charmant et très bien équipé.
                                         Franck est un hôte très agréable au contact facile au plaisir de revenir. »
