--- a/CosyPatio.html
+++ b/CosyPatio.html
@@ -191,11 +191,10 @@
                     <div class="col-sm-10 col-lg-3">
                         <div class="card">
                             <div class="card-body p-4">
-                                <h5><img src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"></h5>
+                                <h5 class="text-center mb-4"><img src="icon/icons8-star.png" alt="comment star"><img
+                                        src="icon/icons8-star.png" alt="comment star"><img src="icon/icons8-star.png"
+                                        alt="comment star"><img src="icon/icons8-star.png" alt="comment star"><img
+                                        src="icon/icons8-star.png" alt="comment star"></h5>
                                 <div>
                                     <p>« Airbnb top ! Très sympa, propre, bien aménagé.
                                         Très bonne communication avec l’hôte.
@@ -209,12 +208,10 @@
                     <div class="col-sm-10 offset-lg-1 col-lg-3 mt-2">
                         <div class="card">
                             <div class="card-body p-4">
-
-                                <h5><img src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"><img
-                                        src="icon/icons8-star-48.png" alt="comment star"></h5>
+                                <h5 class="text-center mb-4"><img src="icon/icons8-star.png" alt="comment star"><img
+                                        src="icon/icons8-star.png" alt="comment star"><img src="icon/icons8-star.png"
+                                        alt="comment star"><img src="icon/icons8-star.png" alt="comment star"><img
+                                        src="icon/icons8-star.png" alt="comment star"></h5>
                                 <div>
                                     <p>« Logement décoré avec goûts, très sympa on s’y sent bien, Franck est une
                                         personne accueillante, tout était parfait, nous reviendrons avec plaisir😊. »
@@ -227,7 +224,7 @@
                     </div>
                 </div>
             </div>
-           
+
         </section>
         <!-- ****************** Formulaire ******************** -->
         <form id="form" class="form">
